# blogs-baton

everything-postgres/: custom_datatype.sql  custom_functions.sql  indexing.sql  json_handling.sql  query.sql  schema.sql
everything-postgres/plugins/: pg_vector.sql  postgis.sql  timescaleDB.sql
language-related/: .gitignore
language-related/c/: cat.c  linked_list_mem_management.c  sensor.c
language-related/cpp/: game-example.cpp
language-related/go/script/: scipt-util.go
language-related/go/server/: index.go
language-related/java/: DataPipelineApplication.java
language-related/js/: package.json  server.js
language-related/python/: data-manipulation.py  log-management.py
language-related/rust/: Cargo.toml
language-related/rust/src/: main.rs
multi-platform applications/desktop/image-dobara/: package.json  pnpm-lock.yaml
multi-platform applications/desktop/image-dobara/src/: App.css  App.tsx
multi-platform applications/desktop/image-dobara/src-tauri/: Cargo.toml  tauri.conf.json
multi-platform applications/desktop/image-processor/: package.json
multi-platform applications/desktop/image-processor/src-tauri/: Cargo.toml  tauri.conf.json
multi-platform applications/desktop/image-processor/src-tauri/src/: main.rs
multi-platform applications/mobile/sample_app/: ffigen.yaml  pubspec.yaml
multi-platform applications/web/wasm-util/: .gitignore
protobuf-related/: .gitignore  create_reading.py  sensor.proto  sensor_pb2.py
scripting/: push_image_to_ecr.sh  start_nginx.sh  tmp_files_sanitation.ps1
(+20 files in other folders)
