[package]
name = "image-processor"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"
authors = ["Aatir Nadim"]

[lib]
name = "image_processor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["rustls-tls"] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

